--- a/style.css
+++ b/style.css
@@ -8,15 +8,12 @@ header {
     height: 100px;
     width: 100px;
 }
-.navbar-collapse {
-
-}
 .img-container {
     background-image: url("assets/images/polygon.jpg");
     background-size: cover;
     text-align: center;
     opacity: 1.0;
-    margin-top: 150px;
+    margin-top: 125px;
 }
 .dark-cover {
     font-size: 2vw;
@@ -35,4 +32,8 @@ header {
     color: black;
     background-color: white;
     mix-blend-mode: screen;
+}
+.portfolioImg {
+    height: 100px;
+    width: 200px;
 }
