--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+    padding: 0;
+    background-image: linear-gradient(white, #182955);
+}
 header {
     position: fixed;
     top: 0;
@@ -14,6 +19,17 @@ header {
     text-align: center;
     opacity: 1.0;
     margin-top: 125px;
+    border-style: solid;
+    border-color: black;
+}
+.bioDiv {
+    border-style: solid;
+}
+.portfolioDiv {
+    border-style: solid;
+}
+.contactDiv {
+    border-style: solid;
 }
 .dark-cover {
     font-size: 2vw;
