--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: linear-gradient(white 40%, #182955) no-repeat center center fixed;;
+    background: linear-gradient(white 40%, rgb(111, 156, 166)) no-repeat center center fixed;;
     background-size: 100vmax;
 }
 header {
@@ -28,29 +28,13 @@ header {
     text-align: center;
     opacity: 1.0;
     margin-top: 125px;
-}
-.bioDiv {
-    margin-top: 75px;
-}
-.portfolioDiv {
-    margin-top: 75px;
-}
-#profileImage {
-    height: 25vh;
-    width: 25vh;
-}
-.bioText {
-    font-size: 3vh;
-}
-.contactDiv {
-    margin-top: 75px;
+    color: #182955;
 }
 .dark-cover {
     font-size: 2vw;
     font-weight: bold;
     padding: 10px;
     text-transform: uppercase;
-    color: black;
     mix-blend-mode: exclusion;
 }
 .dark-cover-name {
@@ -60,15 +44,54 @@ header {
     text-transform: uppercase;
     mix-blend-mode: exclusion;
 }
+.bioDiv {
+    margin-top: 75px;
+    color: #182955;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 1s ease-out;
+}
+.bioDiv.fade-in {
+    opacity: 1;
+    transform: translateY(0);
+}
+#profileImage {
+    height: 25vh;
+    width: 25vh;
+}
+.bioText {
+    font-size: 3vh;
+}
+.portfolioDiv {
+    margin-top: 75px;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 1s ease-out;
+}
+.portfolioDiv.fade-in {
+    opacity: 1;
+    transform: translateY(0);
+}
+#portfolioItem {
+    background-color: rgba(111, 156, 166, 0.4);
+    color: #182955;
+}
 .portfolioImg {
     height: 150px;
     width: 250px;
 }
-#portfolioItem {
-    background-color: rgba(63, 76, 113, 0.4);
-    color: white;;
+.contactDiv {
+    margin-top: 75px;
+    margin-bottom: 250px;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 1s ease-out;
+}
+.contactDiv.fade-in {
+    opacity: 1;
+    transform: translateY(0);
 }
 #contactItem {
-    background-color: rgba(63, 76, 113, 0.4);
-    color: white;
+    background-color: rgba(111, 156, 166, 0.4);
+    color: #182955;
 }
