Updated CSS and fonts

--- a/style.css
+++ b/style.css
@@ -10,6 +10,20 @@ header {
     width: 100%;
     z-index: 1;
 }
+h2 {
+    font-family: 'Suravaram', serif;
+    font-size: 4vw;
+    border-bottom-style: solid;
+    border-color: #182955;
+    box-shadow: 0 8px 6px -6px grey;
+}
+h4 {
+    font-family: 'Suravaram', serif;
+    font-size: 3vw;
+    border-bottom-style: solid;
+    border-color: #182955;
+    box-shadow: 0 8px 6px -6px grey;
+}
 .navbar-brand {
     height: 100px;
     width: 100px;
@@ -31,18 +45,43 @@ header {
     color: #182955;
 }
 .dark-cover {
-    font-size: 2vw;
+    font-family: 'Suravaram', serif;
+    font-size: 3vw;
     font-weight: bold;
     padding: 10px;
-    text-transform: uppercase;
-    mix-blend-mode: exclusion;
+    text-shadow:
+    0 1px 0 #ccc,
+    0 2px 0 #c9c9c9,
+    0 3px 0 #bbb,
+    0 4px 0 #b9b9b9,
+    0 5px 0 #aaa,
+    0 6px 1px rgba(0, 0, 0, 0.1),
+    0 0 5px rgba(0, 0, 0, 0.1),
+    0 1px 3px rgba(0, 0, 0, 0.3),
+    0 3px 5px rgba(0, 0, 0, 0.2),
+    0 5px 10px rgba(0, 0, 0, 0.25),
+    0 10px 10px rgba(0, 0, 0, 0.2),
+    0 20px 20px rgba(0, 0, 0, 0.15);
 }
 .dark-cover-name {
+    font-family: 'Suravaram', serif;
     font-size: 6vw;
     font-weight: bold;
     padding: 10px;
     text-transform: uppercase;
-    mix-blend-mode: exclusion;
+    text-shadow:
+    0 1px 0 #ccc,
+    0 2px 0 #c9c9c9,
+    0 3px 0 #bbb,
+    0 4px 0 #b9b9b9,
+    0 5px 0 #aaa,
+    0 6px 1px rgba(0, 0, 0, 0.1),
+    0 0 5px rgba(0, 0, 0, 0.1),
+    0 1px 3px rgba(0, 0, 0, 0.3),
+    0 3px 5px rgba(0, 0, 0, 0.2),
+    0 5px 10px rgba(0, 0, 0, 0.25),
+    0 10px 10px rgba(0, 0, 0, 0.2),
+    0 20px 20px rgba(0, 0, 0, 0.15);
 }
 .bioDiv {
     margin-top: 75px;
@@ -60,6 +99,7 @@ header {
     width: 25vh;
 }
 .bioText {
+    font-family: 'Suravaram', serif;
     font-size: 3vh;
 }
 .portfolioDiv {
@@ -75,6 +115,7 @@ header {
 #portfolioItem {
     background-color: rgba(111, 156, 166, 0.4);
     color: #182955;
+    box-shadow: 0 8px 6px -6px grey;
 }
 .portfolioImg {
     height: 150px;
@@ -94,4 +135,5 @@ header {
 #contactItem {
     background-color: rgba(111, 156, 166, 0.4);
     color: #182955;
+    box-shadow: 0 8px 6px -6px grey;
 }
