--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ h4 {
     font-size: 3vh;
 }
 .portfolioDiv {
+    color: #182955;
     margin-top: 75px;
     opacity: 0;
     transform: translateY(50px);
@@ -128,6 +129,7 @@ h4 {
 .contactDiv {
     margin-top: 75px;
     margin-bottom: 250px;
+    color: #182955;
     opacity: 0;
     transform: translateY(50px);
     transition: all 1s ease-out;
