--- a/style.css
+++ b/style.css
@@ -13,24 +13,20 @@ header {
 h2 {
     font-family: 'Suravaram', serif;
     font-size: 4vw;
-    border-bottom-style: solid;
+    /* border-bottom-style: solid;
     border-color: #182955;
-    box-shadow: 0 8px 6px -6px grey;
+    box-shadow: 0 8px 6px -6px grey; */
 }
 h4 {
     font-family: 'Suravaram', serif;
     font-size: 3vw;
-    border-bottom-style: solid;
+    /* border-bottom-style: solid;
     border-color: #182955;
-    box-shadow: 0 8px 6px -6px grey;
+    box-shadow: 0 8px 6px -6px grey; */
 }
 .navbar-brand {
     height: 100px;
     width: 100px;
-}
-.navbar {
-    background: white;
-
 }
 .linkText {
     font-family: 'Suravaram', serif;
@@ -40,7 +36,7 @@ h4 {
 .linkText:hover {
     color: #182955;
 }
-.img-container {
+.welcomeDiv {
     text-align: center;
     opacity: 1.0;
     margin-top: 125px;
@@ -51,19 +47,6 @@ h4 {
     font-size: 3vw;
     font-weight: bold;
     padding: 10px;
-    text-shadow:
-    0 1px 0 #ccc,
-    0 2px 0 #c9c9c9,
-    0 3px 0 #bbb,
-    0 4px 0 #b9b9b9,
-    0 5px 0 #aaa,
-    0 6px 1px rgba(0, 0, 0, 0.1),
-    0 0 5px rgba(0, 0, 0, 0.1),
-    0 1px 3px rgba(0, 0, 0, 0.3),
-    0 3px 5px rgba(0, 0, 0, 0.2),
-    0 5px 10px rgba(0, 0, 0, 0.25),
-    0 10px 10px rgba(0, 0, 0, 0.2),
-    0 20px 20px rgba(0, 0, 0, 0.15);
 }
 .dark-cover-name {
     font-family: 'Suravaram', serif;
@@ -71,19 +54,6 @@ h4 {
     font-weight: bold;
     padding: 10px;
     text-transform: uppercase;
-    text-shadow:
-    0 1px 0 #ccc,
-    0 2px 0 #c9c9c9,
-    0 3px 0 #bbb,
-    0 4px 0 #b9b9b9,
-    0 5px 0 #aaa,
-    0 6px 1px rgba(0, 0, 0, 0.1),
-    0 0 5px rgba(0, 0, 0, 0.1),
-    0 1px 3px rgba(0, 0, 0, 0.3),
-    0 3px 5px rgba(0, 0, 0, 0.2),
-    0 5px 10px rgba(0, 0, 0, 0.25),
-    0 10px 10px rgba(0, 0, 0, 0.2),
-    0 20px 20px rgba(0, 0, 0, 0.15);
 }
 .bioDiv {
     margin-top: 75px;
