--- a/style.css
+++ b/style.css
@@ -13,16 +13,13 @@ header {
 h2 {
     font-family: 'Suravaram', serif;
     font-size: 4vw;
-    /* border-bottom-style: solid;
+    border-bottom-style: solid;
     border-color: #182955;
-    box-shadow: 0 8px 6px -6px grey; */
+    box-shadow: 0 8px 6px -6px grey;
 }
 h4 {
     font-family: 'Suravaram', serif;
     font-size: 3vw;
-    /* border-bottom-style: solid;
-    border-color: #182955;
-    box-shadow: 0 8px 6px -6px grey; */
 }
 .navbar-brand {
     height: 100px;
@@ -56,7 +53,9 @@ h4 {
     text-transform: uppercase;
 }
 .bioDiv {
-    margin-top: 75px;
+    padding-top: 175px;
+    padding-bottom: 200px;
+    height: 600px;
     color: #182955;
     opacity: 0;
     transform: translateY(50px);
@@ -76,6 +75,7 @@ h4 {
     font-size: 3vh;
 }
 .portfolioDiv {
+    padding-top: 175px;
     color: #182955;
     margin-top: 75px;
     opacity: 0;
@@ -97,8 +97,8 @@ h4 {
     width: 250px;
 }
 .contactDiv {
-    margin-top: 75px;
-    margin-bottom: 250px;
+    padding-top: 200px;
+    padding-bottom: 225px;
     color: #182955;
     opacity: 0;
     transform: translateY(50px);
