--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ h4 {
 }
 .contactDiv {
     padding-top: 200px;
-    padding-bottom: 225px;
+    padding-bottom: 100px;
     color: #182955;
     opacity: 0;
     transform: translateY(50px);
@@ -123,4 +123,8 @@ h4 {
 #contactItem:hover {
     background-color: rgba(21, 41, 85, 0.4);
     color: white;
+}
+.contactImg {
+    height: 150px;
+    width: 250px;
 }
