--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ h4 {
     font-size: 3vw;
 }
 .navbar-brand {
-    height: 100px;
-    width: 100px;
+    height: 15vh;
+    width: 15vh;
 }
 .linkText {
     font-family: 'Suravaram', serif;
@@ -36,7 +36,7 @@ h4 {
 .welcomeDiv {
     text-align: center;
     opacity: 1.0;
-    margin-top: 125px;
+    margin-top: 18vh;
     color: #182955;
 }
 .dark-cover {
@@ -53,9 +53,9 @@ h4 {
     text-transform: uppercase;
 }
 .bioDiv {
-    padding-top: 150px;
-    padding-bottom: 200px;
-    height: 600px;
+    padding-top: 20vh;
+    height: 100vh;
+    overflow-y: scroll;
     color: #182955;
     opacity: 0;
     transform: translateY(50px);
@@ -75,9 +75,9 @@ h4 {
     font-size: 3vh;
 }
 .portfolioDiv {
-    padding-top: 175px;
+    padding-top: 20vh;
     color: #182955;
-    margin-top: 75px;
+    margin-top: 11vh;
     opacity: 0;
     transform: translateY(50px);
     transition: all 1s ease-out;
@@ -98,12 +98,12 @@ h4 {
     color: white;
 }
 .portfolioImg {
-    height: 150px;
-    width: 250px;
+    height: 25vh;
+    width: 36vh;
 }
 .contactDiv {
-    padding-top: 200px;
-    padding-bottom: 100px;
+    padding-top: 15vh;
+    padding-bottom: 15vh;
     color: #182955;
     opacity: 0;
     transform: translateY(50px);
@@ -125,6 +125,6 @@ h4 {
     color: white;
 }
 .contactImg {
-    height: 150px;
-    width: 250px;
+    height: 28vh;
+    width: 36vh;
 }
