--- a/style.css
+++ b/style.css
@@ -53,14 +53,14 @@ h4 {
     padding: 10px;
     text-transform: uppercase;
 }
-.bioDiv {
+.brandDiv {
     padding-top: 15vh;
     color: #182955;
     opacity: 0;
     transform: translateY(50px);
     transition: all 1s ease-out;
 }
-.bioDiv.fade-in {
+.brandDiv.fade-in {
     opacity: 1;
     transform: translateY(0);
 }
@@ -69,7 +69,7 @@ h4 {
     width: 25vh;
     box-shadow: 0 8px 6px -6px grey;
 }
-.bioText {
+.brandText {
     font-family: 'Suravaram', serif;
     font-size: 3vh;
 }
