Fixed small text issues

--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@ header {
 }
 h2 {
     font-family: 'Suravaram', serif;
-    font-size: 4vw;
+    font-size: 40px;
     border-bottom-style: solid;
     border-color: #182955;
     box-shadow: 0 8px 6px -6px grey;
 }
 h4 {
     font-family: 'Suravaram', serif;
-    font-size: 3vw;
+    font-size: 40px;
 }
 .navbar-brand {
     height: 15vh;
@@ -42,13 +42,13 @@ h4 {
 }
 .dark-cover {
     font-family: 'Suravaram', serif;
-    font-size: 3vw;
+    font-size: 40px;
     font-weight: bold;
     padding: 10px;
 }
 .dark-cover-name {
     font-family: 'Suravaram', serif;
-    font-size: 6vw;
+    font-size: 70px;
     font-weight: bold;
     padding: 10px;
     text-transform: uppercase;
@@ -83,6 +83,11 @@ h4 {
 .portfolioDiv.fade-in {
     opacity: 1;
     transform: translateY(0);
+}
+.portfolioText {
+    font-family: 'Suravaram', serif;
+    font-size: 3vh;
+    text-align: center;
 }
 #portfolioItem {
     background-color: rgba(110, 156, 166, 0.4);
