--- a/style.css
+++ b/style.css
@@ -108,6 +108,11 @@ a:hover {
     background-color: rgba(21, 41, 85, 0.4);
     color: white;
 }
+@media only screen and (max-width: 550px) {
+    #portfolioItem {
+      background: white;
+    }
+}
 .portfolioImg {
     height: 25vh;
     width: 36vh;
@@ -134,6 +139,11 @@ a:hover {
 #contactItem:hover {
     background-color: rgba(21, 41, 85, 0.4);
     color: white;
+}
+@media only screen and (max-width: 550px) {
+    #contactItem {
+      background: white;
+    }
 }
 .contactImg {
     height: 28vh;
