--- a/style.css
+++ b/style.css
@@ -29,14 +29,9 @@ h4 {
 a:hover {
     color: white;
 }
-.navbar-brand {
-    height: 15vh;
-    width: 15vh;
-    z-index: -2;
-}
 .linkText {
     font-family: 'Suravaram', serif;
-    font-size: 2vw;
+    font-size: 35px;
     color: #6f9ca6;
 }
 .linkText:hover {
