--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ a:hover {
     background-color: rgba(21, 41, 85, 0.4);
     color: white;
 }
+.modalImage {
+    height: 210px;
+    width: 460px;
+}
 #profileModal .modal-dialog .modal-content .modal-body img {
     height: 300px;
 }
